# FDS_Reconciler

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/adapters/: claude_llm.py  gemini_llm.py  pinecone_store.py
app/api/: routes_logs.py
app/chat/: graph.py  retriever.py
app/comparison/: aligner.py  assembler.py
app/indexing/: chunker.py  indexer.py
app/parsing/: docx_parser.py  pdf_parser.py
app/prompts/: chat_synthesis.py
frontend/: .env.example  Dockerfile  README.md  api_client.py  config.py  pyproject.toml  streamlit_app.py
frontend/components/: chat_panel.py  citations.py  comparison_view.py  log_panel.py
samples/: FDS_PriceBook_V5.docx
scripts/: demo.py  demo_live.py  health_check.py  index_docs.py
tests/: test_aligner.py
