[project]
name = "fds-reconciler-frontend"
version = "0.1.0"
description = "Streamlit frontend for the FDS Reconciler"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "streamlit-autorefresh>=1.0",
]

[tool.uv]
package = false
